--- a/index.html
+++ b/index.html
@@ -4,17 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
+   <script src="script.js"></script>
     <title>Movie App</title>
 </head>
 <body>
-      <header>       
-        <form id="form">
-            <h2>CineShow</h2>
-            <input type="text"
-             placeholder="Search"
-              id="search"
-              class="search">
+    <div class="container">
+        <div class="search-box">
+        <a href="#">
+            <h1>CineShow</h1>
+        </a>
+        <form id="search-form">
+            <input type="text" id="search-input" placeholder="Search">
+               <button class="search-btn" type="submit">Search </button>
         </form>
-     </header>
+        </div>
+    </div>
+
+
+
+
 </body>
 </html>
