--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-   <script src="script.js"></script>
+   <script src="index.js"></script>
     <title>Movie App</title>
 </head>
 <body>
@@ -18,6 +18,7 @@
                <button class="search-btn" type="submit">Search </button>
         </form>
         </div>
+        <div id="result"></div>
     </div>
 
 
